--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>A Pen by  Saksham Agarwal</title>    
+		<title>Saksham Agarwal</title>    
 		<link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 		<link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 		<link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css'>
@@ -13,7 +13,7 @@
 
 		<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
 			<div class="container topnav">
-			    <!-- Brand and toggle get grouped for better mobile display -->
+			<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 						<span class="sr-only">Toggle navigation</span>
@@ -23,7 +23,7 @@
 					</button>
 					<a class="navbar-brand topnav" href="http://athena.nitc.ac.in/saksham_b130917cs/" target="_blank">Saksham Agarwal</a>
 				</div>
-			    <!-- Collect the nav links, forms, and other content for toggling -->
+				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
