--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="container topnav">
 			<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#link-bar">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -24,7 +24,7 @@
 					<a class="navbar-brand topnav" href="http://athena.nitc.ac.in/saksham_b130917cs/" target="_blank">Saksham Agarwal</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse" id="link-bar">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
 							<a href="#home">Home</a>
