--- a/index.html
+++ b/index.html
@@ -48,6 +48,40 @@
 			<!-- /.container -->
 		</nav>
 
+		<a name="home"></a>
+		<div class="intro-header">
+			<h1 class="section-heading text-center">Saksham Agarwal.</h1>
+			<h2 class="about-me text-center">Learner, Traveller, Tech. Enthusiast </h2>
+			<hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+				<li>
+                                	<a href="https://www.facebook.com/saksham.agarwal1995" target="_blank" class="btn btn-default btn-lg">
+						<i class="fa fa-facebook fa-fw"></i>
+						<span class="network-name">Facebook</span>
+					</a>
+				</li>
+				<li>
+					<a href="https://github.com/sakshamagarwal" target="_blank" class="btn btn-default btn-lg ">
+						<i class="fa fa-github fa-fw"></i> 
+						<span class="network-name">Github</span>
+					</a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/saksham-agarwal-545a15a8" target="_blank" class="btn btn-default btn-lg">
+						<i class="fa fa-linkedin fa-fw"></i> 
+						<span class="network-name">Linkedin</span>
+					</a>
+				</li>
+				<li>
+					<a href="http://www.freecodecamp.com/sakshamagarwal" target="_blank" class="btn btn-default btn-lg">
+						<i class="fa fa-fire fa-fw"></i> 
+						<span class="network-name">freeCodeCamp</span>
+					</a>
+				</li>
+			</ul>
+			
+		</div>
+
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 		<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 	</body>
